--- a/index.css
+++ b/index.css
@@ -94,19 +94,22 @@ padding-top: 10px;
 
 .pagination {
 display: inline-block;
+padding-left: 25px;
+padding-top: 50px;
 }
   
-.pagination a {
-color: black;
+a {
+color: rgb(1, 29, 7);
 float: left;
 padding: 8px 16px;
 text-decoration: none;
 }
 
-.pagination a.active {
-background-color: #4CAF50;
-color: white;
+a:hover:not(.active) {
+    background-color: #ddd;
+} 
+
+a.active {
+    background-color: #aa0b40;
+    color: white;
 }
-
-.pagination a:hover:not(.active) {background-color: #ddd;}
-
